# DesignPatterns

./: pyproject.toml
AbstractFactoryDesignPattern/: big_seat.py  car_equip_factory.py  car_equip_factory_interface.py  client.py  medium_seat.py  nylon_wheel.py  pu_wheel.py  rubber_wheel.py  seat_factory.py  seat_interface.py  small_seat.py  wheel_factory.py  wheel_interface.py
BridgeDesignPattern/: circle.py  circle_implementer.py  client.py  interface_implementer.py  interface_shape.py  square.py  square_implementer.py
BuilderPattern/: boat_director.py  client.py  interface_ship_builder.py  passenger_director.py  ship.py  ship_builder.py  tanker_director.py
CompositeDesignPattern/: client.py  composite.py
FactoryDesignPattern/: athele_person.py  doctor_person.py  factory.py  interface_person.py  main.py  teacher_person.py
LightWeightDesignPattern/: client.py  lightweight.py
ObserverDesignPattern/: observer.py
PrototypePattern/: client.py  document.py  interface_prototype.py
SingletonPattern/: client.py  interface_singleton_person.py  singleton_person.py
StrategyDesignPattern/: strategy.py
